--- a/index.html
+++ b/index.html
@@ -88,23 +88,28 @@
                 <h3>favemenu Co.</h3>
                 <h4>Software Engineer Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                        <li>Developed ‘Carousel' feature located at home page.</li>
+                        <li>Worked with Angular for front end web development.</li>
+                        <li>QA’d multiple features for product release.</li>
+                        <li>Integrated our existing favemenu API to the admin dashboard.</li>
+                        <li>Developed multiple features used for analytics within the admin dashboard.</li>
+                        <li> Experience using development tools such as GitHub, Visual Studio, Android Studio, Heroku, Trello,
+                            Figma, Miro, Slack, Docker, Postman.</li>
+                    </ul>
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2020 – August 2020">
+                <h3>Walmart</h3>
+                <h4>Walmart Associate</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                        <li>Dealt with large data entries, primarily inventory and stock.</li>
+                        <li>Maintained inventory and organization of stock and backroom.</li>
+                        <li>Worked with other sales associates on upkeep of store.</li>
+                        <li>Regulated the cash register and reconciled transactions with customers.</li>
+                    </ul>
                 </p>
             </div>
         </div>
@@ -114,30 +119,17 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>Pasadena City College</h3>
+            <span class="education-date">Sept 2016 - June 2018</span>
+            <h4> Associate of Science in Engineering & Technology 
+                <br> Associate of Science in Natural Sciences</h4>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h3>California State University, Northridge</h3>
+            <span class="education-date">September 2018 - May 2022</span>
             <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -193,7 +185,6 @@
             <li>Redux</li>
             <li>Java</li>
             <li>Github</li>
-            <li></li>
         </ul>
     </div>
     <!-- End #skills -->
