--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Varoujan Makdesian</h1>
             <h2>Software Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images\Varoujan Makdesian Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -141,15 +141,16 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/STIcon.png" width="300px" height="300px" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>SwiftifyTicketing</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Swiftifyticketing is an online application which allows for a school faculty to post tickets and close them upon repair within an organization. Users will be able to give a ticket a description, priority and status etc. Tickets are tracked inside of a dashboard and the users have role based permissions to access that information.
                         </p>
-                        <a href="#">View Project</a>
+                        <p>Technologies Used: MongoDB, Express, React, Node.Js, Javascript, Redux, HTML, CSS</p>
+                        <a href="https://gleaming-snickerdoodle-22026b.netlify.app/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -184,7 +185,15 @@
             <li>React</li>
             <li>Redux</li>
             <li>Java</li>
+            <li>MongoDB</li>
+            <li>Express</li>
             <li>Github</li>
+            <li>Scene Builder</li>
+            <li>Android Studio</li>
+            <li>Trello</li>
+            <li>Jira</li>
+            <li>Confluence</li>
+            <li>Unity</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -192,7 +201,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/f/xnqradyb">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -219,22 +228,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/cobra11793" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/varoujan-makdesian-9b5857187/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
