--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Varoujan Makdesian and I am a software developer. I graduated from California State University Northridge in May 2022 with a Bachelors in Computer Science. I'm interested in mobile & web development and currently expanding my knowledge specifically in Android studio, MERN stack and CSS animations. I have experience mostly working in frontend development but I've also dabbled in backend. Outside of coding, I enjoy spending my time playing badminton and video games. I have four dogs that are essentially a full time job but I love to death. I am currently looking for software engineering opportunities. <br> <br> Please feel free to contact me for more information!
+                        My name is Varoujan Makdesian and I am a software developer. I graduated from California State University Northridge in May 2022 with a Bachelors in Computer Science. 
+                        I'm interested in Mobile & Web development and currently expanding my knowledge specifically in Android Studio, MERN stack and CSS animations. 
+                        I have experience working in frontend development but I've also dabbled in backend. Outside of coding, I enjoy spending my time playing badminton and video games. 
+                        I have four dogs that are essentially a full time job but I love them to death. I am currently looking for software engineering opportunities.
+                         <br> <br> Please feel free to contact me for more information!
                     </p>
                 </div>
             </div>
