--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Varoujan Makdesian</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -73,11 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Varoujan Makdesian and I am a software developer. I graduated from California State University Northridge in May 2022 with a Bachelors in Computer Science. 
+                        I graduated from California State University Northridge in May 2022 with a Bachelors in Computer Science. 
                         I'm interested in Mobile & Web development and currently expanding my knowledge specifically in Android Studio, MERN stack and CSS animations. 
                         I have experience working in frontend development but I've also dabbled in backend. Outside of coding, I enjoy spending my time playing badminton and video games. 
                         I have four dogs that are essentially a full time job but I love them to death. I am currently looking for software engineering opportunities.
-                         <br> <br> Please feel free to contact me for more information!
                     </p>
                 </div>
             </div>
