--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Varoujan Makdesian</h1>
-      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Gamer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Sports Enthusiast, Gamer"></span></p>
     </div>
   </section><!-- End Hero -->
 
