--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Varoujan Makdesian</h1>
-      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Sports Enthusiast, Gamer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Sports Enthusiast, Video Gamer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -112,7 +112,7 @@
               </div>
             </div>
             <p>
-              I am a recent graduate from California State University, Northridge. I graduated in May 2022 with a Bachelors of Science in Computer Science. I'm interested in Mobile & Web development and currently expanding my knowledge specifically in Android Studio, MERN stack and CSS animations. I have experience working in frontend development but I've also dabbled in backend. My main goal as a developer is to focus on responsive websites that can be accessed across all devices. </p> Outside of coding, I enjoy spending my time playing badminton and video games. I have four dogs that are essentially a full time job but I love them to death. I also follow a wide variety of sports from eSports to NBA and so on. Hoping the Lakers pull through this year to win big! </p> I am currently looking for software engineering opportunities.
+              I am a recent graduate from California State University, Northridge. I graduated in May 2022 with a Bachelors of Science in Computer Science. I'm interested in Mobile & Web development and currently expanding my knowledge specifically in Android Studio, MERN stack and CSS animations. I have experience working in frontend development but I've also dabbled in backend. My main goal as a developer is to focus on responsive websites that can be accessed across all devices. </p> Outside of coding, I enjoy spending my time playing badminton and video games. I have four dogs that are essentially a full time job but I love them to death. I also follow a wide variety of sports from eSports to NBA and so on. Hoping the Lakers pull through this year to win big! </p> I am currently looking for software engineering opportunities, particularly revolving around front-end development.
 Please feel free to contact me for more information!
             </p>
           </div>
@@ -122,7 +122,7 @@ Please feel free to contact me for more information!
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!-- <section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
@@ -167,7 +167,7 @@ Please feel free to contact me for more information!
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -175,7 +175,7 @@ Please feel free to contact me for more information!
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>The skills I've obtained include but are not limited to: </p>
         </div>
 
         <div class="row skills-content">
@@ -197,9 +197,16 @@ Please feel free to contact me for more information!
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">JQuery<i class="val">65%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -208,25 +215,33 @@ Please feel free to contact me for more information!
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">React <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Java <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">Git <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Express <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            
 
           </div>
 
@@ -241,34 +256,38 @@ Please feel free to contact me for more information!
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here's a summary of my resume! I've also a attached a copy <a href="VaroujanMakdesianResume.pdf" download>HERE</a> as a pdf to download.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Varoujan Makdesian</h3>
             <div class="resume-item pb-0">
-              <h4>Varoujan Makdesian</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Objective</h4>
+              <p><em>Looking for a position in the software engineering or Computer Science environment to utilize my skills and capability and contribute to the success of my future employer.</em></p>
+              <h4>Contact information</h4>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Address: 2584 New York Dr. Altadena CA 91001</li>
+                <li>Cell: 1-(626)-421-8338</li>
+                <li>Email: Vmakdesian@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor's of Science in Computer Science</h4>
+              <h5>2018 - 2022</h5>
+              <p><em>California State University Northridge, Northridge CA</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Associates of Science in Engineering & Technology</h4>
+              <h5>2016- 2018</h5>
+              <p><em>Pasadena City College, Pasadena CA</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Associates of Science in Natural Sciences</h4>
+              <h5>2016- 2018</h5>
+              <p><em>Pasadena City College, Pasadena CA</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
