--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Varoujan Makdesian</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
         </div>
       </div>
 
@@ -62,7 +62,6 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -73,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Varoujan Makdesian</h1>
-      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Sports Enthusiast, Video Gamer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Front-end Developer, Software Engineer, Sports Enthusiast, Foodie"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -101,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>VMakdesian@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Los Angeles, California</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Pasadena, California</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -256,7 +255,7 @@ Please feel free to contact me for more information!
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Here's a summary of my resume! I've also a attached a copy <a href="VaroujanMakdesianResume.pdf" download>HERE</a> as a pdf to download.</p>
+          <p>Here are just some snippets from my resume, I've also a attached a copy <a href="VaroujanMakdesianResume.pdf" download>HERE</a> as a pdf to download.</p>
         </div>
 
         <div class="row">
@@ -267,7 +266,7 @@ Please feel free to contact me for more information!
               <p><em>Looking for a position in the software engineering or Computer Science environment to utilize my skills and capability and contribute to the success of my future employer.</em></p>
               <h4>Contact information</h4>
               <ul>
-                <li>Address: 2584 New York Dr. Altadena CA 91001</li>
+                <li>Address: Pasadena, CA </li>
                 <li>Cell: 1-(626)-421-8338</li>
                 <li>Email: Vmakdesian@gmail.com</li>
               </ul>
@@ -293,25 +292,31 @@ Please feel free to contact me for more information!
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Faculty Teacher & Website Manager</h4>
+              <h5>October 2022 - Present</h5>
+              <p><em>Academicise | Temple City, California </em></p>
+              <h6>Responsibilities</h6>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Maintain and update company website using Wordpress, Javascript, CSS, HTML, & PHP technologies.</li>
+                <li>Ensure responsive design of website both on mobile & web platforms. </li>
+                <li>Contribute to the education of younger minds in the fields of Math, English, & Computer Science.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Software Engineer Intern </h4>
+              <h5>May 2019 - October 2020</h5>
+              <p><em>favemenu Co. | Cerritos, California</em></p>
+              <h6>Highlights</h6>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Developed Carousel feature located at home page.</li>
+                <li>Contributed to favemenu pitch deck for VC&AS.</li>
+                <li>Drafted and coordinated test plans and methods for manual testing of Stripe integration</li>
+              </ul>
+              <h6>Responsibilities</h6>
+              <ul>
+                <li>Integrated our existing favemenu API into our admin dashboard along with developing multiple features used for analytics</li>
+                <li>Set up new interns with our existing technologies and trained them to use it efficiently</li>
+                <li>Contributed to the search algorithm (both business and algorithm logic)</li>
               </ul>
             </div>
           </div>
@@ -438,7 +443,6 @@ Please feel free to contact me for more information!
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -456,7 +460,7 @@ Please feel free to contact me for more information!
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Great teammate to work with, especially under any stressful circumstances. Contributes greatly to team meetings and is willing to go the extra mile. Always ambitious and strives to learn more no matter the environment.
+                  Varoujan is a great teammate to work with, especially under any stressful circumstances. He contributes greatly to team meetings and is willing to go the extra mile. Always ambitious and strives to learn more no matter the environment.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -469,7 +473,7 @@ Please feel free to contact me for more information!
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  "We were looking not only for an software engineer intern but a contributor to our mission and Varoujan delivered. An employee whose rapid growth excelled our expectations. Could not have been happier with whom we chose to join our team.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -482,12 +486,12 @@ Please feel free to contact me for more information!
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  "All around a great asset to the team. Would not be afraid to go the extra steps to help others in any difficulties they faced. When it came down to it, Varoujan went above and beyond supporting our staff anyway he could."
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Vincent Nguyen</h3>
+                <h4>Owner & Lead Finance/Sales</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -495,25 +499,12 @@ Please feel free to contact me for more information!
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  As a student new to the field of software development, Varoujan has made coding simple for me to understand and is a great teacher. He's very knowledgeable on a variety of topics and can explain them with ease. Moreso, he is very patient and is great at leading me towards the right steps to becoming an efficient programmer.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Jenny Xu</h3>
+                <h4>Coding Student</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -530,7 +521,7 @@ Please feel free to contact me for more information!
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Feel free to contact me day or night via email or phone listed below! I currently reside in Pasadena, California</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -540,22 +531,22 @@ Please feel free to contact me for more information!
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Pasadena, California</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>vmakdesian@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+16264218338</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13206.80880345415!2d-118.14468665401095!3d34.153960256117976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c2dc38330b51%3A0x52b41161ad18f4a!2sPasadena%2C%20CA!5e0!3m2!1sen!2sus!4v1683274930806!5m2!1sen!2sus" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
